-*- mode: outline -*-

* Changes since version 0.35

** bug fixes

Fixed stream cryptors for Chacha and Salsa20. Some bytes of the
keystream were ignored after encrypting less than 64 bytes at once.

** new features

Added Gray streams support for ABCL, ECL and Clisp.

Added encrypting streams and decrypting streams. Only stream ciphers
and block ciphers in CTR mode are supported for the moment.

* Version 0.35, released 2017-09-06

** bug fixes

Fixed type checking of stream element-type in the
update-digest-from-stream function.

Fixed possible timing attack in the pbkdf2-check-password function.

** new features

New algorithms:
 - Cipher: XChacha, XSalsa20
 - Diffie-Hellman: Curve25519, Curve448, Elgamal
 - Digest: JH, Groestl
 - Key derivation function: Argon2i
 - Message authentication code: Blake2, Blake2s
 - Signature: Ed448

New default pseudo-random number generator (os-prng) using the
operating system's PRNG.

Added optimized versions of some common functions for CCL on x86-64
CPUs and for ECL.

Added optimized AES functions (round keys generation, encryption and
decryption) for SBCL on x86-64 CPUs with AES-NI support.

Added optimized Blake2s mixing for SBCL on x86-64 CPUs.

Added the constant-time-equal function to check the equality of two
byte arrays (e.g. passwords, MACs) in constant time.

Added the make-message, destructure-message, make-signature and
destructure-signature functions allowing to manage the elements of
messages and signatures returned by encrypt-message and sign-message
by hand if necessary (e.g. to use a different serialization).

Added the destructure-public-key and destructure-private-key functions
(e.g. to store keys somewhere and reconstruct them later with
make-public-key and make-private-key).

Added a unified API for MACs.

* Version 0.34, released 2017-03-07

** bug fixes

Padding issues in 64-bit SHA variants have been fixed.

Compiling with newer versions of SBCL will no longer throw errors due to