@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Ironclad</title>
-<!-- 2017-09-17 dim. 11:54 -->
+<!-- 2017-09-17 dim. 14:13 -->
 <meta  charset="utf-8">
 <meta  name="generator" content="Org-mode">
 <meta  name="author" content="The Ironclad developers">
@@ -2032,6 +2032,60 @@ mode are supported by <a href="#make-encrypting-stream">make-encrypting-stream</
 <a href="#make-decrypting-stream">make-decrypting-stream</a>. Therefore the <i>padding</i> parameter is always
 ignored.
 </p>
+</div>
+</div>
+
+<div id="outline-container-sec-10-4" class="outline-3">
+<h3 id="sec-10-4">MAC streams</h3>
+<div class="outline-text-3" id="text-10-4">
+<p>
+MAC streams compute a message authentication code of the data written
+to them according to a specific MAC algorithm.
+</p>
+
+<div class="org-src-container">
+
+<pre class="src src-lisp" id="make-authenticating-stream">(defun make-authenticating-stream mac key &amp;rest args) =&gt; stream
+</pre>
+</div>
+
+<p>
+Make a stream that computes a MAC of the data written to it according
+to the algorithm <i>mac</i> initialized with a <i>key</i>. The parameters used
+to create the MAC can be specified as <i>args</i>.
+<a href="#produce-mac">produce-mac</a> may be used to obtain a MAC of all the data written to the
+stream.
+</p>
+
+<p>
+<span class="underline">Note:</span> Calling <a href="#produce-mac">produce-mac</a> on a MAC stream does not alter the
+internal state of the MAC.
+</p>
+
+
+<p>
+Example: encrypt some data and compute a MAC of the ciphertext
+</p>
+<pre class="example">
+(let* ((data ...)
+       (output-stream ...)
+       (encryption-key ...)
+       (authentication-key ...)
+       (iv ...)
+       (mac-stream (make-authenticating-stream :hmac
+                                               authentication-key
+                                               :sha3))
+       (stream (make-broadcast-stream output-stream mac-stream))
+       (cipher-stream (make-encrypting-stream stream
+                                              :chacha
+                                              :stream
+                                              encryption-key
+                                              :initialization-vector iv)))
+  (write-sequence data cipher-stream)
+  ...
+  (let ((mac (produce-mac mac-stream)))
+    ...))
+</pre>
 </div>
 </div>
 </div>
