@@ -120,7 +120,8 @@
    #:make-digesting-stream
    #:execute-with-digesting-stream #:with-digesting-stream
    #:execute-with-digesting-text-stream #:with-digesting-text-stream
-   #:make-encrypting-stream #:make-decrypting-stream)
+   #:make-encrypting-stream #:make-decrypting-stream
+   #:make-authenticating-stream)
   ;; supported digests
   (:export #:whirlpool #:md2 #:md4 #:md5 #:adler32 #:crc24 #:crc32
            #:tiger #:sha1 #:sha224 #:sha256 #:sha384 #:sha512
